# easy-media-cli

./: Cargo.toml  LICENSE  README.md  README_EN.md  README_en.md  cliff.toml  release.toml
.github/workflows/: release.yml  test.yml
benches/: collect_videos.rs  read_progress.rs
ffmpeg_examples/: metadata.jsonc  metadata.txt  scene detect.txt
src/: common.rs  error.rs  event.rs  executor.rs  lib.rs  main.rs  metadata.rs  progress.rs  ui.rs
src/cli/: encode_video.rs  mod.rs  scene_cut_snap.rs  scs.rs
src/client/: ffmpeg_client.rs  mod.rs
src/command_executor/: default_executor.rs  mod.rs
src/common/: error.rs  format.rs  formator.rs  fs.rs  media_scan.rs  mod.rs  parser.rs  time.rs  video_collector.rs
src/domain/: cancel_token.rs  event.rs  mod.rs  progress.rs  task.rs
src/domain/media/: fetcher.rs  metadata.rs  mod.rs  resolution.rs
src/ffmpeg_progress/: mod.rs  parser.rs  progress.rs  raw_progress.rs  tracker.rs
src/infra/: cancel_token.rs  command_runner.rs  event_bus.rs  ffmpeg_progress.rs  file_system.rs  mod.rs  test_helpers.rs
src/infra/ffmpeg_progress/: mod.rs  parser.rs  progress.rs  raw_progress.rs  tracker.rs
src/infra/metadata_fetcher/: default_fetcher.rs  mod.rs
src/infra/metadata_fetcher/ffprobe/: converter.rs  mod.rs  raw_json.rs
src/media_metadata/: fetcher.rs  metadata.rs  mod.rs
src/media_metadata/ffprobe/: mod.rs  raw_json.rs
src/task/: execution.rs  id_generator.rs  info.rs  manager.rs  matadata.rs  mod.rs  progress.rs  scene_cut_snap.rs  status.rs  thumbnail.rs  transcode.rs
src/task/command/: mod.rs  wrapper.rs
src/task/ffmpeg/: mod.rs  wrapper.rs
src/tasks/: media_metadata_getter.rs  mod.rs  thumbnail_generator.rs  video_encoder.rs
src/ui/: mod.rs  progress_bar.rs  render_scheduler.rs  renderer.rs  state.rs  stats.rs  sync_ui.rs  task_state_store.rs
