[package]
name = "easy-media-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {version = "1.0.102"}
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0" }
futures = "0.3.32"
thiserror = "2.0.18"
tokio = {version = "1.52.3",features = ["macros","rt-multi-thread","process","io-util","sync","time"]}

[profile.release]
opt-level = 2
strip = true
overflow-checks = false
lto = true
panic = "abort"
