[package]
name = "easy-media-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/codenoobforreal/easy-media-cli"
description = "A lightweight FFmpeg-powered CLI for batch video processing and scene-based thumbnail generation"
categories = ["command-line-utilities", "multimedia"]
keywords = ["cli", "ffmpeg", "batch-processing", "video", "thumbnail", "scene-detection"]

[dependencies]
anyhow = { version = "1" }
clap = { version = "4", features = ["derive", "wrap_help"] }
crossterm = { version = "0.29.0" }
ctrlc = { version = "3" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = { version = "3" }
criterion = { version = "0.8" }

[[bench]]
name = "read_progress"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
strip = true
lto = true
panic = "abort"
debug = true

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
must_use_candidate = "warn"
missing_errors_doc = "warn"
